--- a/reservasi/templates/h.html
+++ b/reservasi/templates/h.html
@@ -45,43 +45,103 @@
                                     <label>Tanggal:</label>
                                     <input type="date" id="tanggal" name="tanggal"
                                         onchange="if (!this.value.startsWith('0')) showHours();">
-                                        <div>
-                                            <div class="app-check">
-                                              <input type="radio" class="option-input radio" name="example" />
-                                              <div class="app-border">
-                                        
-                                                <label class="app-label">9:00 AM
-                                                </label>
+                                        <div class="app-time">
+                                            <div>
+                                              <p>Timings</p>
+                                              <p>9:00AM to 12:00PM</p>
+                                              <div class="app-check">
+                                                <input type="radio" class="option-input radio" name="example" />
+                                                <div class="app-border">
+                                          
+                                                  <label class="app-label">9:00 AM
+                                                  </label>
+                                                </div>
+                                                <input type="radio" class="option-input radio" disabled name="example" />
+                                                <div class="app-border">
+                                          
+                                                  <label class="app-label">9:30 AM
+                                                  </label>
+                                                </div>
+                                                <input type="radio" class="option-input radio" name="example" disabled />
+                                                <div class="app-border">
+                                          
+                                                  <label class="app-label">10:00 AM
+                                                  </label>
+                                                </div>
+                                                <input type="radio" class="option-input radio" name="example" />
+                                                <div class="app-border">
+                                          
+                                                  <label class="app-label">10:30 AM
+                                                  </label>
+                                                </div>
+                                                <input type="radio" class="option-input radio" name="example" />
+                                                <div class="app-border">
+                                          
+                                                  <label class="app-label">11:00 AM
+                                                  </label>
+                                                </div>
+                                                <input type="radio" class="option-input radio" name="example" disabled />
+                                                <div class="app-border">
+                                          
+                                                  <label class="app-label">11:30 AM
+                                                  </label>
+                                                </div>
                                               </div>
-                                              <input type="radio" class="option-input radio" disabled name="example" />
-                                              <div class="app-border">
-                                        
-                                                <label class="app-label">9:30 AM
-                                                </label>
-                                              </div>
-                                              <input type="radio" class="option-input radio" name="example" disabled />
-                                              <div class="app-border">
-                                        
-                                                <label class="app-label">10:00 AM
-                                                </label>
-                                              </div>
-                                              <input type="radio" class="option-input radio" name="example" />
-                                              <div class="app-border">
-                                        
-                                                <label class="app-label">10:30 AM
-                                                </label>
-                                              </div>
-                                              <input type="radio" class="option-input radio" name="example" />
-                                              <div class="app-border">
-                                        
-                                                <label class="app-label">11:00 AM
-                                                </label>
-                                              </div>
-                                              <input type="radio" class="option-input radio" name="example" disabled />
-                                              <div class="app-border">
-                                        
-                                                <label class="app-label">11:30 AM
-                                                </label>
+                                            </div>
+                                            <div>
+                                              <p>Timings</p>
+                                              <p>1:00PM to 5:00PM</p>
+                                              <div class="app-check">
+                                                <input type="radio" class="option-input radio" name="example" />
+                                                <div class="app-border">
+                                          
+                                                  <label class="app-label">1:00 PM
+                                                  </label>
+                                                </div>
+                                                <input type="radio" class="option-input radio" name="example" disabled />
+                                                <div class="app-border">
+                                          
+                                                  <label class="app-label">1:30 PM
+                                                  </label>
+                                                </div>
+                                                <input type="radio" class="option-input radio" name="example" />
+                                                <div class="app-border">
+                                          
+                                                  <label class="app-label">2:00 PM
+                                                  </label>
+                                                </div>
+                                                <input type="radio" class="option-input radio" name="example" disabled />
+                                                <div class="app-border">
+                                          
+                                                  <label class="app-label">2:30 PM
+                                                  </label>
+                                                </div>
+                                                <input type="radio" class="option-input radio" name="example" />
+                                                <div class="app-border">
+                                          
+                                                  <label class="app-label">3:00 PM
+                                                  </label>
+                                                </div>
+                                                <input type="radio" class="option-input radio" name="example" disabled />
+                                                <div class="app-border">
+                                          
+                                                  <label class="app-label">3:30 PM
+                                                  </label>
+                                                </div>
+                                                <input type="radio" class="option-input radio" name="example" />
+                                                <div class="app-border">
+                                          
+                                                  <label class="app-label">4:00 PM
+                                                  </label>
+                                                </div>
+                                          
+                                                <input type="radio" class="option-input radio" name="example" disabled />
+                                                <div class="app-border">
+                                          
+                                                  <label class="app-label">4:30 PM
+                                                  </label>
+                                                </div>
+                                          
                                               </div>
                                             </div>
                                           </div>
